--- a/templates/home.html
+++ b/templates/home.html
@@ -21,13 +21,13 @@
         hx-target="#chat-output"
         hx-trigger="submit"
         hx-swap="beforeend"
-        class="p-4 bg-blue-200"
+        class="p-4 bg-blue-200 flex justify-end"
       >
         <input
           type="text"
           name="userInput"
           placeholder="Type here..."
-          class="input input-bordered w-full max-w-xs"
+          class="input input-bordered flex-grow mr-2"
         />
         <button type="submit" class="btn btn-primary px-6 py-3">Submit</button>
       </form>
