--- a/templates/home.html
+++ b/templates/home.html
@@ -21,9 +21,7 @@
           <span class="ml-3 text-sm font-medium">Loading...</span>
         </div>
       </div>
-      <div id="chat-output" class="flex-1 overflow-y-auto">
-        <!-- Responses and Queries will appear here -->
-      </div>
+      <div id="chat-output" class="flex-1 overflow-y-auto"></div>
       <form
         hx-post="/submit"
         hx-indicator="#loading"
