--- a/templates/interaction.html
+++ b/templates/interaction.html
@@ -5,7 +5,7 @@
   </div>
 </div>
 <div class="flex justify-center">
-  <div class="text-center max-w-xs p-2 rounded-lg bg-gray-200 m-2">
+  <div class="text-center max-w-lg p-2 rounded-lg bg-gray-200 m-2">
     {{ response }}
   </div>
 </div>
